--- a/src/styles/profile-pic.css
+++ b/src/styles/profile-pic.css
@@ -1,5 +1,5 @@
 
-
+/* 
 .profile-pic {
   display: flex;
   justify-content: right;
@@ -7,4 +7,3 @@
   width: 53px;
   height: 23px;
   /* padding-top: 60px; */
-}
