updates in about page, nav

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,17 +1,4 @@
-
-/* 
-.content p {
-text-align: center;
-font-family: 'Lato', sans-serif;
-Style: Bold;
-Font-size: 18;
+.text-container{
+	border:2px solid #41D6BF;
 }
-
-/* 
-h1 {
-	text-align: center;
-	font-family: 'Roboto', sans-serif;
-	Style: Bold;
-	Font-size: 30;
-	} */
 	 
