--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,4 +1,34 @@
 .text-container{
-	border:2px solid #41D6BF;
+	border: 2px solid #41D6BF;
+	height: 100%;
+	margin: 2%;
+}
+
+h1{
+	text-align: center;
+}
+h2{
+	text-align: center;
+}
+
+#text{
+	margin: 1%;
+}
+
+#email{
+	margin: 1%;
+	text-align: center;
+}
+
+#contact{
+	display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.skills-icon{
+	height: 60px;
+	width: 60px;
 }
 	 
