--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -7,18 +7,33 @@
 
 h1{
 	text-align: center;
+	font-family:'Roboto', sans-serif;
+	font-size: 3em;
+	font-weight: bold;
+	color:#41D6BF;
 }
 h2{
 	text-align: center;
+	font-family:'Lato', sans-serif;
+	font-size: 1.2em;
+	font-style: italic;
 }
 
-#text{
-	margin: 1%;
+#p{
+	font-family: 'Lato', sans-serif;
+	display:block;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
 }
 
 #email{
 	margin: 1%;
 	text-align: center;
+	padding: 12px;
+	font-size: 3em;
+	cursor: pointer;
 }
 
 #logo {
@@ -30,14 +45,19 @@ h2{
 
 #contact{
 	display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+	align-items: flex-start;
+	justify-content: space-between;
 	margin: 20px;
 }
 
 .skills-icon{
 	height: 60px;
 	width: 60px;
-	color: black;
 }
-	 
+
+.link{
+	font-family:'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 1.7em;
+	padding: 12px;
+}
