--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -19,13 +19,10 @@ h2{
 	font-style: italic;
 }
 
-#p{
+#text{
 	font-family: 'Lato', sans-serif;
 	display:block;
-	margin-block-start: 1em;
-	margin-block-end: 1em;
-	margin-inline-start: 0px;
-	margin-inline-end: 0px;
+	margin: 2%;
 }
 
 #email{
@@ -33,14 +30,7 @@ h2{
 	text-align: center;
 	padding: 12px;
 	font-size: 3em;
-	cursor: pointer;
-}
-
-#logo {
-	animation-name: flip;
-	animation-duration: 3s;
-	animation-delay: 2s;
-	animation-iteration-count: 2;
+	width: 40%;
 }
 
 #contact{
@@ -51,13 +41,15 @@ h2{
 }
 
 .skills-icon{
-	height: 60px;
-	width: 60px;
+	height: 70px;
+	width: 70px;
+}
+.icon-text{
+	text-align: center;
 }
 
-.link{
-	font-family:'Roboto', sans-serif;
-	font-weight: bold;
-	font-size: 1.7em;
-	padding: 12px;
+.icon-container{
+	display: flex;
+	justify-content: space-between;
+	margin: 20px;
 }
