--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -30,7 +30,7 @@ h2{
 	text-align: center;
 	padding: 12px;
 	font-size: 3em;
-	width: 40%;
+	margin: auto;
 }
 
 #contact{
@@ -52,4 +52,35 @@ h2{
 	display: flex;
 	justify-content: space-between;
 	margin: 20px;
+}
+
+.email-form{
+	justify-content: center;
+    display: flex;
+    flex-direction: column;
+	width: 50vw;
+	margin-left: 20vw;
+}
+
+.email-form-input{
+	margin-bottom: 5vh;
+}
+
+.email-submit-button{
+	width: 25vw;
+    margin-left: 10vw;
+}
+
+@media screen and (max-width: 600px){
+	#contact{
+		flex-direction: column;
+		align-items: center
+	}
+}
+
+@media screen and (max-width: 500px){
+	.icon-container{
+		flex-direction: column;
+		align-items: center;
+	}
 }
