--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -14,9 +14,16 @@
 	font-family:'Roboto', sans-serif;
 	font-weight: bold;
 	font-size: 1.7em;
-	padding: 12px;
+  padding: 12px;
+  height: 100%;;
 }
 
 .link:hover {
   background-color: #41D6BF;
+}
+@media screen and (max-width: 500px){
+	.flex-nav-container{
+		flex-direction: column;
+		align-items: center;
+	}
 }
