--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -1,7 +1,7 @@
 
 .flex-cover-container {
   display: flex;
-  height: 200px;
+  height: 25vh;
   align-items: flex-start;
   background-image: url("..//img/cover.png");
   justify-content: space-between;
@@ -23,10 +23,4 @@
   margin: 20px;
   text-align: center;
   height: 175px;
-}
-
-@media screen and (min-width: 700px) {
-  .container {
-      background: blue;
-  }
 }
