--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,14 +8,18 @@
 }
 
 .link{
-  background-color:#55B9FF;
-  color:white;
+  background-color: #55B9FF;
+  color: white;
   cursor: pointer;
-	font-family:'Roboto', sans-serif;
-	font-weight: bold;
-	font-size: 1.7em;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 1.7em;
   padding: 12px;
-  height: 100%;;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  width: 95vw;
+  height: 5vh;
 }
 
 .link:hover {
@@ -24,6 +28,7 @@
 @media screen and (max-width: 500px){
 	.flex-nav-container{
 		flex-direction: column;
-		align-items: center;
+    align-items: center;
+    height: 15vh;
 	}
 }
