--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -27,8 +27,13 @@
 }
 @media screen and (max-width: 500px){
 	.flex-nav-container{
-		flex-direction: column;
+		/* flex-direction: column; */
     align-items: center;
-    height: 15vh;
-	}
+    /* height: 15vh; */
+    margin: 0%;
+  }
+  
+  .link{
+    font-size: 1em;
+  }
 }
