testing content scroll on actual device

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -62,6 +62,11 @@ h2{
 		align-items: center
 	}
 
+	.content-scroll{
+		height: 89vh;
+		overflow-y: scroll;
+	}
+
 }
 
 @media screen and (max-width: 500px){
