--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -69,6 +69,13 @@ h2{
 
 }
 
+@media screen and (max-height: 600px){
+	.content-scroll{
+		height: 80vh;
+		overflow-y: scroll;
+	}
+}
+
 @media screen and (max-width: 500px){
 	.icon-container{
 		flex-direction: column;
