--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,10 +1,9 @@
 
 .flex-nav-container {
   display: flex;
-  height: 20px;
   align-items: flex-start;
   justify-content: space-between;
-  margin: 20px;
+  margin: 5px;
 }
 
 .link{
@@ -26,6 +25,19 @@
   background-color: #41D6BF;
 }
 @media screen and (max-width: 500px){
+	.flex-nav-container{
+		/* flex-direction: column; */
+    align-items: center;
+    /* height: 15vh; */
+    margin: 0%;
+  }
+  
+  .link{
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-height: 500px){
 	.flex-nav-container{
 		/* flex-direction: column; */
     align-items: center;
