email spelling change and profile pic for desktop

--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -19,10 +19,10 @@
 }
 
 .flex-cover-container > #profile-pic {
-  width: 12vw;
+  width: 145px;
   margin: 20px;
   text-align: center;
-  height: 20vh;
+  height: 175px;
 }
 
 @media screen and (max-width: 500px){
